<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tabFragment"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/preferencesFragment"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_preferences" />
    </group>
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_logout" />
</menu>
