<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.fragments.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_tabFragment"
            app:destination="@id/tabFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.myapplication.fragments.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/tabFragment"
        android:name="com.example.myapplication.fragments.TabFragment"
        android:label="@string/title_tabs"
        tools:layout="@layout/fragment_tab" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.myapplication.fragments.ContactFragment"
        android:label="@string/contact_title"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.example.myapplication.fragments.PreferencesFragment"
        android:label="@string/prefs_title"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/favFragment"
        android:name="com.example.myapplication.fragments.FavFragment"
        android:label="@string/tab_favorites"
        tools:layout="@layout/fragment_fav" />

</navigation>
