<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs_language"
        android:layout_marginTop="8dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs_theme"
        android:layout_marginTop="8dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs_notifications"
        android:layout_marginTop="8dp" />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/spellwalker_title"
            android:id="@+id/imageView2"/>

</LinearLayout>
