<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:enabled="false"
            android:layout_marginTop="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login_google"
            android:layout_marginTop="12dp" />

        <TextView
                android:id="@+id/textCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_create_account"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"/>
        <ImageView
                android:src="@drawable/spellwalker_title"
                android:layout_width="match_parent"
                android:layout_height="374dp" android:id="@+id/imageView"/>

    </LinearLayout>

</ScrollView>
